<resources>
    <string name="app_name">Tikal Doorbell</string>

    <string name="txt_password_hint">Enter Pin Code</string>
    <string name="txt_delete">X</string>

    <string name="txt_pad_1">1</string>
    <string name="txt_pad_2">2</string>
    <string name="txt_pad_3">3</string>
    <string name="txt_pad_4">4</string>
    <string name="txt_pad_5">5</string>
    <string name="txt_pad_6">6</string>
    <string name="txt_pad_7">7</string>
    <string name="txt_pad_8">8</string>
    <string name="txt_pad_9">9</string>
    <string name="txt_pad_0">0</string>
    <string name="txt_pad_star">*</string>
    <string name="txt_pad_hash_tag">#</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="access_denied">Access Denied!</string>
    <string name="access_granted">Access Granted.</string>
</resources>
