<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/keypadRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue0"
    tools:context=".MainActivity">

    <!--..........................................row.1..........................................-->

    <EditText
        android:id="@+id/etKeyCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="60dp"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pad_1"
        style="@style/Pad.Key"
        android:layout_width="@dimen/txt_pad_width"
        android:layout_height="@dimen/txt_pad_height"
        android:text="@string/txt_pad_1"
        app:layout_constraintBottom_toBottomOf="@id/pad_2"
        app:layout_constraintEnd_toStartOf="@id/pad_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/pad_2" />

    <Button
        android:id="@+id/pad_2"
        style="@style/Pad.Key"
        android:layout_width="@dimen/txt_pad_width"
        android:layout_height="@dimen/txt_pad_height"
        android:text="@string/txt_pad_2"
        app:layout_constraintBottom_toTopOf="@id/pad_5"
        app:layout_constraintEnd_toStartOf="@+id/pad_3"
        app:layout_constraintStart_toEndOf="@id/pad_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/pad_3"
        style="@style/Pad.Key"
        android:layout_width="@dimen/txt_pad_width"
        android:layout_height="@dimen/txt_pad_height"
        android:text="@string/txt_pad_3"
        app:layout_constraintBottom_toBottomOf="@id/pad_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pad_2"
        app:layout_constraintTop_toTopOf="@id/pad_2" />

    <!--..........................................row.2..........................................-->

    <Button
        android:id="@+id/pad_4"
        style="@style/Pad.Key"
        android:layout_width="@dimen/txt_pad_width"
        android:layout_height="@dimen/txt_pad_height"
        android:text="@string/txt_pad_4"
        app:layout_constraintBottom_toBottomOf="@id/pad_5"
        app:layout_constraintEnd_toStartOf="@id/pad_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/pad_5" />

    <Button
        android:id="@+id/pad_5"
        style="@style/Pad.Key"
        android:layout_width="@dimen/txt_pad_width"
        android:layout_height="@dimen/txt_pad_height"
        android:text="@string/txt_pad_5"
        app:layout_constraintBottom_toTopOf="@id/pad_8"
        app:layout_constraintEnd_toStartOf="@+id/pad_6"
        app:layout_constraintStart_toEndOf="@id/pad_4"
        app:layout_constraintTop_toBottomOf="@+id/pad_2" />

    <Button
        android:id="@+id/pad_6"
        style="@style/Pad.Key"
        android:layout_width="@dimen/txt_pad_width"
        android:layout_height="@dimen/txt_pad_height"
        android:text="@string/txt_pad_6"
        app:layout_constraintBottom_toBottomOf="@id/pad_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pad_5"
        app:layout_constraintTop_toTopOf="@id/pad_5" />

    <!--..........................................row.3..........................................-->

    <Button
        android:id="@+id/pad_7"
        style="@style/Pad.Key"
        android:layout_width="@dimen/txt_pad_width"
        android:layout_height="@dimen/txt_pad_height"
        android:text="@string/txt_pad_7"
        app:layout_constraintBottom_toBottomOf="@id/pad_8"
        app:layout_constraintEnd_toStartOf="@id/pad_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/pad_8" />

    <Button
        android:id="@+id/pad_8"
        style="@style/Pad.Key"
        android:layout_width="@dimen/txt_pad_width"
        android:layout_height="@dimen/txt_pad_height"
        android:text="@string/txt_pad_8"
        app:layout_constraintBottom_toTopOf="@id/pad_0"
        app:layout_constraintEnd_toStartOf="@+id/pad_9"
        app:layout_constraintStart_toEndOf="@id/pad_7"
        app:layout_constraintTop_toBottomOf="@+id/pad_5" />

    <Button
        android:id="@+id/pad_9"
        style="@style/Pad.Key"
        android:layout_width="@dimen/txt_pad_width"
        android:layout_height="@dimen/txt_pad_height"
        android:text="@string/txt_pad_9"
        app:layout_constraintBottom_toBottomOf="@id/pad_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pad_8"
        app:layout_constraintTop_toTopOf="@id/pad_8" />

    <!--..........................................row.3..........................................-->

    <Button
        android:id="@+id/pad_star"
        style="@style/Pad.Key"
        android:layout_width="@dimen/txt_pad_width"
        android:layout_height="@dimen/txt_pad_height"
        android:text="@string/txt_pad_star"
        app:layout_constraintBottom_toBottomOf="@id/pad_0"
        app:layout_constraintEnd_toStartOf="@id/pad_0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/pad_0" />

    <Button
        android:id="@+id/pad_0"
        style="@style/Pad.Key"
        android:layout_width="@dimen/txt_pad_width"
        android:layout_height="@dimen/txt_pad_height"
        android:layout_marginBottom="8dp"
        android:text="@string/txt_pad_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pad_hash_tag"
        app:layout_constraintStart_toEndOf="@id/pad_star"
        app:layout_constraintTop_toBottomOf="@+id/pad_8" />

    <Button
        android:id="@+id/pad_hash_tag"
        style="@style/Pad.Key"
        android:layout_width="@dimen/txt_pad_width"
        android:layout_height="@dimen/txt_pad_height"
        android:text="@string/txt_pad_hash_tag"
        app:layout_constraintBottom_toBottomOf="@id/pad_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pad_0"
        app:layout_constraintTop_toTopOf="@id/pad_0" />

</androidx.constraintlayout.widget.ConstraintLayout>